Stage three of notification rewrite. Page cache refresh required. Watched notifications added with configurable cutoff percent. Styling fixes. Add information back to settings page for required restart on web interface changes. Use user_id on user link in activity pane. Added channels option to Pushbullet. Possible fix for text encoding issues in Plexwatch importer. Thread the notifications. Move most of the notification logic to the notification handler.

--- a/data/interfaces/default/css/plexwatch.css
+++ b/data/interfaces/default/css/plexwatch.css
@@ -8416,24 +8416,23 @@ ol.test >li {
 	background-color: #2f2f2f;
 }
 
-.stacked-configs > li > span > a {
+.stacked-configs > li > span > a.toggle-right {
 	float: right;
 	color: #999;
 	padding-left: 10px;
+}
+
+.stacked-configs > li > span > a.toggle-left {
+	color: #444;
+	padding-right: 2px;
 }
 
 .stacked-configs > li > span > a:hover {
 	color: #eee;
 }
 
-.stacked-configs > li > span > i {
-	cursor: pointer;
-	padding-right: 2px;
-	color: #444;
-}
-
-.stacked-configs > li > span > i:hover {
-	color: #eee;
+.stacked-configs > li > span > a.active {
+	color: #eb8600;
 }
 
 .stacked-configs > li > span > input[type='checkbox'] {
